[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Barzabel <Kochenko1995@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
alembic = "^1.13.1"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.1"
passlib = "^1.7.4"
pycryptodome = "^3.20.0"
cryptocode = "^0.1"
asyncpg = "^0.29.0"
bcrypt = "^4.1.3"

[tool.poetry.scripts]
site = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
